// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToHTML should correctly generate html from component base jsx structure 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
  <body>
    <div class=\\"main-container\\">
        <h2>
Hello World!
        </h2>
        <input value=\\"write here\\">
        </input>
        <button>
Submit
        </button>
    </div>
  </body>
</html>"
`;

exports[`renderToHTML should correctly generate html from simple jsx 1`] = `
"<div id=\\"container\\" class=\\"bordered active\\">
  <h1>
Hello World
  </h1>
  <h2>
Prop Title
  </h2>
  <button onclick=\\"console.log(&quot;Hello World!&quot;)\\">
Click me!
  </button>
  <input autofocus draggable>
  </input>
</div>"
`;

exports[`renderToHTML should correctly parse async components 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
  <body>
    <div class=\\"main-container\\">
        <h2>
Async title
        </h2>
        <input value=\\"write here\\">
        </input>
        <button>
Submit
        </button>
    </div>
  </body>
</html>"
`;

exports[`renderToHTML should correctly render jsx with arrays in between elements 1`] = `
"<div>
  <h1>
Header
  </h1>
  <p>
0
  </p>
  <p>
1
  </p>
  <footer>
  </footer>
</div>"
`;

exports[`renderToHTML should properly handle context data close-by providers should not interfere with each other 1`] = `
"<html>
  <body>
        <p>
bar
        </p>
        <p>
baz
        </p>
        <p>
qux
        </p>
        <p>
coorg
        </p>
        <p>
fred
        </p>
        <p>
thud
        </p>
      <p>
foo
      </p>
  </body>
</html>"
`;

exports[`renderToHTML should properly handle context data correctly handles encapsulated providers 1`] = `
"<html>
  <body>
    <div id=\\"root\\">
        <div class=\\"template for-magic\\">
          <div>
              <input type=\\"text\\" name=\\"repeating_magic_dwarf\\">
              </input>
          </div>
        </div>
    </div>
  </body>
</html>"
`;

exports[`renderToHTML should properly handle context data should correctly drill the prop data through multiple components 1`] = `
"<html>
  <body>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <p>
foo
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
  </body>
</html>"
`;

exports[`renderToHTML should properly handle context data should correctly handle provider pattern 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
    <body>
      <div class=\\"main-container\\">
        <div>
          <h1>
Provided title
          </h1>
        </div>
      </div>
    </body>
</html>"
`;

exports[`renderToHTML should properly handle context data should correctly override existing context data 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
  <body>
      <h1>
This title was overridden
      </h1>
      <input placeholder=\\"write here\\">
      </input>
  </body>
</html>"
`;

exports[`renderToHTML should properly handle context data should correctly render jsx with context data 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
  <body>
    <div class=\\"main-container\\">
      <div>
        <h1>
This title is set via the context
        </h1>
      </div>
    </div>
  </body>
</html>"
`;

exports[`renderToHTML should properly handle context data should correctly render jsx with context data and arrays in between elements 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
  <body>
      <div>
        <h1>
This title is set via the context
        </h1>
      </div>
      <input placeholder=\\"write here\\">
      </input>
      <button>
Submit
      </button>
  </body>
</html>"
`;

exports[`renderToHTML should properly handle context data should correctly render jsx with context data and async components 1`] = `
"<html>
  <head>
    <meta charset=\\"utf-8\\">
    </meta>
    <meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\">
    </meta>
    <title>
Page Title
    </title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </meta>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\">
    </link>
  </head>
  <body>
      <div>
        <h1>
This title is set via the context
        </h1>
      </div>
      <input placeholder=\\"write here\\">
      </input>
      <button>
Submit
      </button>
  </body>
</html>"
`;
